<resources>
    <string name="app_name">&appname;</string>
    <string name="facebook_app_id" translatable="false">901182356657500</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb901182356657500</string>
    <string name="google_server_client_id" translatable="false">116794088193-4vi8q56s4f6ug4kjr58ea8j7jjjploe9.apps.googleusercontent.com</string>
    <string name="project_number" translatable="false">116794088193</string>
    <string name="nocap_remaining">over</string>
    <string name="cap_starts_in">Start over</string>
    <string name="cap_ends_in">Nog</string>
    <string name="cap_ended_x_ago">%1$s geleden</string>
    <string name="x_ago">%1$d geleden</string>
    <string name="cap_by">Door</string>
    <string name="cap_anonymous">Anoniem</string>
    <string name="button_read_more">Lees verder</string>
    <string name="button_motivations">Motivaties</string>
    <string name="button_see_results">Uitslag</string>
    <string name="button_share">Delen</string>
    <string name="button_reply">Reageren</string>
    <string name="cap_facebook">Facebook</string>
    <string name="cap_email">Email</string>
    <string name="cap_full_name">Volledige naam</string>
    <string name="cap_password">Wachtwoord</string>
    <string name="cap_repeat_password">Herhaal wachtwoord</string>
    <string name="cap_voting_has_closed">De stemming is gesloten</string>
    <string name="message_vote_being_cast">Je stem wordt uitgebracht&#8230;</string>
    <string name="error_vote_ended">De stemming is gesloten, je kunt niet meer stemmen!</string>
    <string name="question_change_vote_question">Weet je zeker dat je je stem wilt aanpassen?</string>
    <string name="cap_error">Error</string>
    <string name="error_occurred">Er is iets fout gegaan.</string>
    <string name="error_try_voting_later">Probleem later opnieuw te stemmen.</string>
    <string name="cap_tallying_ellipsis">Wordt geteld&#8230;</string>
    <string name="cap_background">Achtergrond</string>
    <string name="cap_conclusion">Conclusie</string>
    <string name="readable_date_format_full">HH:mm - dd MMMM yyyy</string>
    <string name="readable_date_format_major">d MMMM, yyyy</string>
    <string name="nocap_votes">stemmen</string>
    <string name="nocap_with">met</string>
    <string name="cap_note">Opmerking</string>
    <string name="cap_oops">Oops</string>
    <string name="cap_success">Succes</string>
    <string name="cap_open">Openen</string>
    <string name="cap_close">Sluiten</string>
    <string name="cap_home">Thuis</string>
    <string name="cap_today">Vandaag</string>
    <string name="cap_motion">Stelling</string>
    <string name="cap_motions">Stellingen</string>
    <string name="cap_overview">Overzicht</string>
    <string name="cap_personal">Persoonlijk</string>
    <string name="cap_you">Jij</string>
    <string name="message_vote_was_cast">Je stem is uitgebracht! De resultaten worden zichtbaar zodra de stemming is gesloten.</string>
    <string name="nocap_by">door</string>
    <string name="nocap_voted">stemde</string>
    <string name="cap_continue">Doorgaan niet mogelijk</string>
    <string name="message_outdated_app_text">Deze versie van de app wordt niet langer ondersteund. Wil je de nieuwste versie downloaden?</string>
    <string name="cap_cancel">Annuleer</string>
    <string name="cap_download">Download</string>
    <string name="cap_change">Aanpassen</string>
    <string name="nocap_90s">90\'s</string>
    <string name="nocap_80s">80\'s</string>
    <string name="nocap_70s">70\'s</string>
    <string name="nocap_60s">60\'s</string>
    <string name="nocap_50s">50\'s</string>
    <string name="cap_i_am_senior">Ik ben een senior</string>
    <string name="cap_too_young">Ik mag nog niet stemmen</string>
    <string name="cap_all_done">Klaar!</string>
    <string name="message_can_start_voting">Je bent klaar om te stemmen!\nTip: voor meer inzicht in het onderwerp van vandaag, tik op het oog icoon.</string>
    <string name="message_political_pref_updated">Je politieke verwantschap is gewijzigd. Je partijpunten worden hierdoor niet beïnvloed.</string>
    <string name="error_one_vote_per_phone">Je kunt maar één keer stemmen per toestel.</string>
    <string name="cap_sign_out">Afmelden</string>
    <string name="cap_most_recent">Meest recent</string>
    <string name="cap_your_votes">Jouw stemmen</string>
    <string name="cap_your_preferences">Jouw instellingen</string>
    <string name="cap_motivations">Motivaties</string>
    <string name="cap_for_x">voor %1$s</string>
    <string name="cap_in_majority">In de meerderheid</string>
    <string name="cap_in_minority">In de minderheid</string>
    <string name="cap_with_motivations">Met motivaties</string>
    <string name="cap_pull_to_refresh">Sleep om te vernieuwen</string>
    <string name="cap_info">Info</string>
    <string name="cap_whatamiseeing">Wat zie ik hier?</string>
    <string name="cap_party_points">Partijpunten</string>
    <string name="cap_party_points_questionmark">Partijpunten?</string>
    <string name="cap_go_back">Ga terug</string>
    <string name="cap_not_found">Niet gevonden</string>
    <string name="cap_add_motivation">Motivatie toevoegen</string>
    <string name="message_motionlist_info1">Op deze pagina kun je zien welke stellingen het meest recentelijk op &appname; zijn verschenen.</string>
    <string name="message_motionlist_info2">Op stellingen met een witte balk zichtbaar kan nog worden gestemd!</string>
    <string name="message_motionlist_past_info">Op deze pagina kun je zien op welke stellingen je in het verleden hebt gestemd. De meeste recente stellingen verschijnen bovenaan.</string>
    <string name="message_motionlist_majority_info">Op deze pagina kun je zien op welke stellingen je hebt gestemd, waar jouw keuze in de meerderheid was in de resultaten. Met andere woorden: de meeste mensen waren het met jou eens!</string>
    <string name="message_motionlist_minority_info">Op deze pagina kun je zien op welke stellingen je hebt gestemd, waar jouw keuze in de minderheid was in de resultaten. Met andere woorden: de meeste mensen waren het met jou oneens!</string>
    <string name="message_motionlist_motivations_info">Op deze pagina kun je zien voor welke stellingen jij een motivatie hebt geschreven.</string>
    <string name="error_not_update_preference">Je instellingen konden niet worden veranderd. Probeer het later opnieuw!</string>
    <string name="error_motion_not_found">Oeps! Deze stelling bestaat niet (meer)</string>
    <string name="cap_you_voted">Jij stemde</string>
    <string name="cap_your_motivation_was">Jouw motivatie was</string>
    <string name="cap_did_not_vote">Je hebt niet gestemd</string>
    <string name="message_motivate_after_voting">Je kunt jouw motivatie hier plaatsen zodra je gestemd hebt!</string>
    <string name="message_no_motivations_yet">Er zijn nog geen motivaties om %1$s te stemmen geplaatst!</string>
    <string name="question_best_motivations">Wat is het beste argument om %1$s te stemmen?</string>
    <string name="button_add_motivation">Voeg motivatie toe</string>
    <string name="message_no_motivations_final">Er zijn geen motivaties om %1$s te stemmen geplaatst. Het zal wel geen populaire gedachte zijn geweest!</string>
    <string name="message_motivation_being_added">Je motivatie wordt toegevoegd&#8230;</string>
    <string name="error_not_voted_before_motivation">You have to vote before you can add a motivation!</string>
    <string name="error_already_motivated">Je hebt al een vergelijkbare motivatie of reactie geplaatst.</string>
    <string name="error_not_added_motivation">Jouw motivatie kon niet worden togevoegd. Probeer het later nog eens..</string>
    <string name="message_motivation_added">Jouw motivatie is toegevoegd!</string>
    <string name="cap_reply_to_motivation">Reageer op motivatie van %1$s</string>
    <string name="question_why_vote_x">Waarom heb je %1$s gestemd?</string>
    <string name="question_why_vote">Waarom heb je gestemd?</string>
    <string name="message_motivation_being_deleted">Je motivatie wordt verwijderd&#8230;</string>
    <string name="message_motivation_deleted">Je motivatie is verwijderd.</string>
    <string name="error_motivation_not_deleted">Je motivatie kon niet worden. Probeer het later opnieuw.</string>
    <string name="message_viewing_as_moderator">Je bekijkt de app nu als moderator.</string>
    <string name="message_viewing_as_regular">Je bekijkt de app nu als reguliere gebruiker.</string>
    <string name="cap_confirmation">Confirmatie</string>
    <string name="question_delete_motivation">Wil je deze motivatie verwijderen?</string>
    <string name="message_already_voted_x">Je hebt al %1$s gestemd!</string>
    <string name="message_already_voted">Je hebt al voor deze optie gestemd!</string>
    <string name="question_what_to_do">Wat wil je graag doen?</string>
    <string name="question_how_to_share">Op welke manier wil je dit item delen?</string>
    <string name="message_posted_to_facebook">Het item is op je Facebook timeline geplaatst.</string>
    <string name="error_not_posted_to_facebook">Het item kon niet op Facebook worden geplaatst.</string>
    <string name="message_posted_to_twitter">Het item is op Twitter geplaatst.</string>
    <string name="error_not_posted_to_twitter">Het item kon niet op Twitter worden geplaatst.</string>
    <string name="error_not_emailed">Het email-bericht kon niet worden verstuurd. Probeer het later nog eens&#8230;</string>
    <string name="message_emailed">Het email-bericht is verstuurd!</string>
    <string name="message_party_points_info">Je verzamelt partijpunten door op &appname; stellingen te stemmen. Partijpunten geven aan met welke &appname; gebruikers jij het het vaakst eens bent. Hoe meer punten, hoe nauwkeuriger het wordt!\n\nHandig als je nieuwsgierig bent naar welke partij het beste bij jou past!</string>
    <string name="cap_question_on_lavoz">Stelling op &appname;</string>
    <string name="cap_motivation_on_lavoz">Motivatie op &appname;</string>
    <string name="cap_look_at_question_colon">Zie deze stelling op &appname;: </string>
    <string name="cap_look_at_motivation_colon">Zie deze motivatie op &appname;: </string>
    <string name="cap_question_colon">Stelling: </string>
    <string name="cap_reaction_colon">Reactie: </string>
    <string name="message_be_heard">Iedere dag stelt &appname; een vraag aan het volk. Laat jouw stem horen!</string>
    <string name="results_formatted">Uitslag: %1$.1f%% stemde %2$s, %3$.1f%% stemde %4$s. Lees verder op &appname;&#8230;</string>
    <string name="conclusion_formatted_zero_decimal">%1$.0f%% %2$s %3$s</string>
    <string name="conclusion_formatted_one_decimal">%1$.1f%% %2$s %3$s</string>
    <string name="cap_delete">Verwijder</string>
    <string name="nocap_points">punten</string>
    <string name="cap_your_party_points">Jouw partijpunten</string>
    <string name="message_support_us_rate">Als je gelooft in onze missie, beoordeel &appname; dan in de App Store. Het zou ons helpen meer mensen te bereiken. Bedankt voor je steun!</string>
    <string name="error_app_crashing">De app zal zo crashen&#8230; Zodra je weer opstart, werkt alles weer. Onze schuld!</string>
    <string name="cap_restart">Opnieuw starten</string>
    <string name="error_email_taken">Dit email adres is al in gebruik. Kies een andere.</string>
    <string name="error_unknown_error">Er is een onbekende fout opgetreden. Probeer het later opnieuw.</string>
    <string name="error_mismatched_credentials">Je gegevens komen niet overeen met een &appname; account.</string>
    <string name="message_motivation_been_deleted">Deze motivatie is verwijderd&#8230;</string>
    <string name="nocap_day">dag</string>
    <string name="nocap_days">dagen</string>
    <string name="nocap_hour">uur</string>
    <string name="nocap_hours">uur</string>
    <string name="cap_adviceaid">Stemwijzer</string>
</resources>