<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.constraint.Guideline
        android:id="@+id/main_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_right_guideline"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/center_left_guideline"
        app:layout_constraintGuide_percent="0.45555556"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/center_right_guideline"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/advice_aid_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lavoz_adviceaid_logo" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/timer_line_layout"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/main_left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/main_right_guideline"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="2dp">
        <View
            android:id="@+id/timer_line_remaining"
            android:background="@color/colorPrimaryLight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
        <View
            android:id="@+id/timer_line_gone"
            android:background="@color/colorGreyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <me.grantland.widget.AutofitTextView
        android:id="@+id/timer_textview"
        android:text=""
        android:freezesText="true"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/timer_line_layout"
        app:layout_constraintLeft_toLeftOf="@+id/main_left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/main_right_guideline"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorGreyMediumTwo" />

    <me.grantland.widget.AutofitTextView
        android:id="@+id/issue_textview"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        app:layout_constraintLeft_toLeftOf="@+id/main_left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/main_right_guideline"
        android:textColor="@color/colorPrimaryLight"
        autofit:minTextSize="20sp"
        android:textSize="28sp"
        android:textAlignment="center"
        android:minLines="1"
        android:maxLines="5"
        android:freezesText="true"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/read_more_button"
        android:layout_width="wrap_content"
        android:padding="12dp"
        android:drawablePadding="8dp"
        android:text="@string/button_read_more"
        android:drawableTop="@drawable/icon_eye_white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/issue_textview"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/vote_disagree_layout"
        app:layout_constraintRight_toLeftOf="@+id/motivations_button"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:freezesText="true"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.8" />
    <Button
        android:id="@+id/motivations_button"
        android:layout_width="wrap_content"
        android:padding="12dp"
        android:drawablePadding="8dp"
        android:text="@string/button_motivations"
        android:drawableTop="@drawable/icon_speech_white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/issue_textview"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/vote_agree_layout"
        app:layout_constraintLeft_toRightOf="@+id/read_more_button"
        app:layout_constraintRight_toLeftOf="@+id/share_button"
        android:layout_marginBottom="8dp"
        android:freezesText="true"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.8" />
    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:padding="12dp"
        android:drawablePadding="8dp"
        android:text="@string/button_share"
        android:drawableTop="@drawable/icon_share_white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/issue_textview"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/motivations_button"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/vote_agree_layout"
        android:layout_marginBottom="8dp"
        android:freezesText="true"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.8" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/vote_disagree_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_rounded_corners_vote_off_button"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintRight_toLeftOf="@+id/center_left_guideline">
        <me.grantland.widget.AutofitLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/vote_disagree_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:lines="1"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                autofit:minTextSize="16sp"
                android:textSize="22sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryLight"
                android:textAllCaps="false" />
        </me.grantland.widget.AutofitLayout>
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/vote_agree_layout"
        app:layout_constraintLeft_toLeftOf="@+id/center_right_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_rounded_corners_vote_off_button"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="100dp">
        <me.grantland.widget.AutofitLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/vote_agree_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:lines="1"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                autofit:minTextSize="16sp"
                android:textSize="22sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryLight"
                android:textAllCaps="false" />
        </me.grantland.widget.AutofitLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/results_container_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vote_agree_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/main_left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/main_right_guideline">

        <TextView
            android:id="@+id/disagree_results_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="14sp"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:minLines="1"
            android:maxLines="1"
            android:text="..."
            android:freezesText="true"
            app:layout_constraintHorizontal_bias="0.0" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/results_disagree_line_layout"
            android:layout_width="match_parent"
            app:layout_constraintLeft_toLeftOf="@+id/main_left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/main_right_guideline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/disagree_results_textview"
            android:layout_height="4dp">
            <View
                android:id="@+id/disagree_line_remaining"
                android:background="@color/colorPrimaryLight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />
            <View
                android:id="@+id/disagree_line_gone"
                android:background="@color/colorGreyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />
        </LinearLayout>

        <TextView
            android:id="@+id/agree_results_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="14sp"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:minLines="1"
            android:maxLines="1"
            android:text="..."
            android:freezesText="true"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/results_agree_line_layout"
            android:layout_width="match_parent"
            app:layout_constraintLeft_toLeftOf="@+id/main_left_guideline"
            app:layout_constraintRight_toLeftOf="@+id/main_right_guideline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/agree_results_textview"
            android:layout_height="4dp">
            <View
                android:id="@+id/agree_line_remaining"
                android:background="@color/colorPrimaryLight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />
            <View
                android:id="@+id/agree_line_gone"
                android:background="@color/colorGreyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />
        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/voting_now_overlay"
        android:orientation="vertical"
        android:background="#ee000000"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="2dp"
        android:clickable="true"
        android:visibility="gone">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/voting_now_inner"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:id="@+id/voting_now_progressbar" />

            <TextView
            android:id="@+id/voting_now_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minLines="1"
            android:maxLines="1"
            android:text="@string/message_vote_being_cast"
            android:freezesText="true"
            android:textColor="@color/colorPrimaryLight"
            android:textAlignment="center"
            android:layout_marginTop="16dp" />


        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/still_loading_overlay"
        android:animateLayoutChanges="true"
        android:background="#aa000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="2dp"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Large.Inverse"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:indeterminate="true"
            android:layout_gravity="center" />
    </FrameLayout>


</android.support.constraint.ConstraintLayout>
